--- a/src/app/søknader/korrigeringAvInntektsmelding/containers/LeggTilDelvisFravær/LeggTilDelvisFravær.css
+++ b/src/app/søknader/korrigeringAvInntektsmelding/containers/LeggTilDelvisFravær/LeggTilDelvisFravær.css
@@ -1,6 +1,4 @@
 .delvisFravaer {
-    padding-bottom: 3rem !important;
-
     .typo-feilmelding {
         margin-top: 0.5rem;
     }
